更新模型配置，添加梯度裁剪支持，重构分类器结构，改进测试用例，启用详细日志输出

--- a/.gitignore
+++ b/.gitignore
@@ -162,6 +162,8 @@ cython_debug/
 #.idea/
 
 *.rar
+*.tar
+*.zip
 logs/
 slurm_logs/
 data/
@@ -170,3 +172,4 @@ checkpoints/
 .vscode/
 failed_configs.txt
 temp.txt
+zi42STIR
